--- a/apps/core/templates/core/sample_detail.html
+++ b/apps/core/templates/core/sample_detail.html
@@ -4,9 +4,11 @@
 {% block body %}
 
 <!-- Header -->
-<div class="container", style="background-color:#CDDC39; color:black; padding:5px; width:100%;">
-    <a style="float:left; color:balck;" href="{% url 'main_view' %}"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
-    <h1>Sample Details</h1>
+<div class="container", style="background-color:#CDDC39; color:black; margin-bottom:5px; padding:5px; width:100%;">
+    <div class="container">
+        <h1 style="float:left;">Sample Details</h1>
+        <a class="navbar-brand" style="float:right; color:black;" href="{% url 'main_view' %}"><i class="fa fa-home" aria-hidden="true" ></i> Home</a>
+    </div>
 </div>
 <!-- end of header -->
 
