--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <title>ElastiDjango Database Project</title>
     </head>
     <body>
         {% block body %}{% endblock %}
