--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -1,7 +1,10 @@
 {% extends "base_view.html" %}
 {% load staticfiles %}
+
 {% block body %}
-<div class="container", style="background-color:#616161; color:white;">
-    <h1> Core Applicaiton Home Page</h1>
+<!-- Header -->
+<div class="container", style="background-color:#CDDC39; color:black; margin-bottom:5px; padding:5px;">
+    <h1 style="float:left;">Core Applicaiton Home Page</h1>
 </div>
+<!-- end of header -->
 {% endblock %}
