--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -1,10 +1,9 @@
 {% extends "base_view.html" %}
 {% load staticfiles %}
 
+{% block title %}
+Core application home page
+{% endblock %}
+
 {% block body %}
-<!-- Header -->
-<div class="container", style="background-color:#CDDC39; color:black; margin-bottom:5px; padding:5px;">
-    <h1 style="float:left;">Core Applicaiton Home Page</h1>
-</div>
-<!-- end of header -->
 {% endblock %}
