--- a/apps/core/static/core/style.css
+++ b/apps/core/static/core/style.css
@@ -1,12 +1,3 @@
-.table>thead>tr>th,
-.table>tbody>tr>th, 
-.table>tfoot>tr>th,
-.table>thead>tr>td,
-.table>tbody>tr>td,
-.table>tfoot>tr>td {
-    padding: 30px;
-    }
-
-.test-class {
-    color: pink;
+#grey_background {
+	background-color: #F5F5F5;
 }
