--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-List of Libraries
+List of Samples
 {% endblock %}
 
 {% block body %}
@@ -12,22 +12,19 @@ List of Libraries
             <thead>
                 <tr>
                     <th>Sample ID</th>
-                    <th>Pool ID</th>
-                    <th>Jira Ticket</th>
+                    <th>Sample Type</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 {% for sample in samples %}
                 <tr>
-                    <td>{{sample.sample_id}}</td>
-                    <td>{{sample.pool_id}}</td>
-                    <td>{{sample.jira_ticket}}</td>
+                    <td><a href="{% url 'core:sample_detail' pk=sample.pk %}">{{sample.sample_id}}</a></td>
+                    <td>{{sample.get_sample_type_display}}</td>
                     <!-- td><a href="{% url 'core:home' %}admin/core/sample/{{sample.pk}}/change">edit</a></td -->
                     <td>
-                        <a href="{% url 'core:sample_detail' pk=sample.pk %}">view</a>
-                        <p style="margin:0;"><a href="{% url 'core:sample_update' pk=sample.pk %}">edit</a></p>
-                        <p style="margin:0;"><a href="{% url 'core:sample_delete' pk=sample.pk %}">delete</a></p>
+                        <p style="margin:0;"><a href="{% url 'core:sample_update' pk=sample.pk %}"><i class="fa fa-pencil" aria-hidden="true" style="color:orange;" "></i> edit</a></p>
+                        <p style="margin:0;"><a href="{% url 'core:sample_delete' pk=sample.pk %}"><i class="icon-remove-sign" style="color:red"></i> delete</a></p>
                     </td>
                 </tr>
                 {% endfor %}
@@ -37,6 +34,6 @@ List of Libraries
 </div>
 
 <div class="container" style="padding:0; ">
-    <a class="btn btn-primary btn-sm" style="float:right; margin-top:5px;" href="{% url 'core:sample_create' %}">Add Library</a>
+    <a class="btn btn-primary btn-sm" style="float:right; margin-top:5px;" href="{% url 'core:sample_create' %}">Add Sample</a>
 </div>
 {% endblock %}
